Change a lot in index and css

--- a/index.html
+++ b/index.html
@@ -20,24 +20,16 @@
   </style>
 </head>
 <body>
-<main>
-  <div class="container">
-    <div class="qr-place">
-      <picture>
-        <source media="(min-width:375px)" srcset="images/image-qr-code.png">
-        <img src="images/image-qr-code.png" alt="A image of barcode" class="image">
-      </picture>
-
-    </div>
-    <div class="container-wrapper">
-      <h2 class="title">  Improve your front-end skills by building projects</h2>
-      <p class="sub-title"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
-  </div>
-</main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+    <picture>
+      <img src="images/image-qr-code.png" alt="">
+    </picture>
+    <article>
+      <h1>Improve your front-end skills by building project</h2>
+        <p>
+          Scan the QR code to visit frontend Mentor and take your coding skills to the next level
+        </p>
+    </article>
+  </main>
 </body>
 </html>
