Delete unnecessary css and build new structure for the html

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
 </head>
 <body>
   <main>
-    <picture>
-      <img src="images/image-qr-code.png" alt="">
-    </picture>
     <article>
+      <img src="images/image-qr-code.png" alt="An Image of QR">
       <h1>Improve your front-end skills by building project</h2>
         <p>
           Scan the QR code to visit frontend Mentor and take your coding skills to the next level
